--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,8 @@ packaging~=23.2
 zipp~=3.20.2
 aiogram
 python-dotenv
+pywin32
+pillow
+google-api-python-client
+google-auth-oauthlib
+google-auth-httplib2
